@@ -20,14 +20,12 @@
 package org.xwiki.notifications.notifiers.internal;
 
 import java.lang.reflect.Type;
-import java.util.Arrays;
 import java.util.List;
 
 import javax.inject.Inject;
 import javax.script.ScriptContext;
 
 import org.xwiki.component.annotation.Component;
-import org.xwiki.component.manager.ComponentManager;
 import org.xwiki.notifications.CompositeEvent;
 import org.xwiki.notifications.NotificationException;
 import org.xwiki.notifications.notifiers.NotificationDisplayer;
@@ -48,7 +46,7 @@ import com.xpn.xwiki.objects.BaseObject;
 public class WikiNotificationDisplayer extends AbstractWikiNotificationRenderer implements NotificationDisplayer
 {
     @Inject
-    private ComponentManager componentManager;
+    private NotificationDisplayer notificationDisplayer;
 
     private Template notificationTemplate;
 
@@ -59,7 +57,7 @@ public class WikiNotificationDisplayer extends AbstractWikiNotificationRenderer 
     {
         super.initialize(baseObject);
 
-        this.supportedEvents = Arrays.asList(this.eventType);
+        this.supportedEvents = List.of(this.eventType);
         this.notificationTemplate =
             extractTemplate(baseObject, WikiNotificationDisplayerDocumentInitializer.NOTIFICATION_TEMPLATE);
     }
@@ -78,8 +76,7 @@ public class WikiNotificationDisplayer extends AbstractWikiNotificationRenderer 
 
             // If we have no template defined, fallback on the default displayer
             if (this.notificationTemplate == null) {
-                return ((NotificationDisplayer) this.componentManager.getInstance(NotificationDisplayer.class))
-                        .renderNotification(eventNotification);
+                return this.notificationDisplayer.renderNotification(eventNotification);
             }
 
             return templateManager.execute(notificationTemplate);
